--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chat App</title>
-
-
+    <meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no"/>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png" />
+    <title>Messanger</title>
     <link rel="stylesheet" href="css/style.css">
 
-
- </head>
+</head>
 <body background="img/linux_tux_penguin_logo_barcode_102200_1440x900.jpg">
-<center><h1>Chat</h1></center>
+<center><h1>Disconnected App For chat</h1></center>
+<hr class="sep-1"/>
+
 <div class="messages"></div>
 <form action="javascript:void(0)">
-    <input type="text" id="message" required autofocus />
+    <label for="message">:)</label><input type="text" id="message" required autofocus />
 </form>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 <script src="js/main.js"></script>
 
